--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -406,6 +406,12 @@ body {
             justify-content: space-between;
             .grid-third {
               width: 100%;
+              @media screen and (max-width: 600px) {
+                &:first-child {
+                  width: 240px;
+                  margin: 0 auto;
+                }
+              }
             }
           }
         }
@@ -507,6 +513,10 @@ body {
               margin-bottom: 60px;
             }
 
+            @media only screen and (max-width:600px) {
+              margin-bottom: 30px;
+            }
+
             .intro p {
               margin: 0;
             }
@@ -549,23 +559,35 @@ body {
                 width: 90%;
                 margin: 30px auto;
               }
+              @media only screen and (max-width:600px) {
+                margin: 15px auto;
+              }
             }
           }
 
           .why{
             font-family: Brandon;
             font-size: 30px;
+            @media only screen and (max-width:600px) {
+              font-size: 20px;
+            }
           }
 
           .know-that{
             font-family: Plantin;
             font-size: 30px;
             float:right;
+            @media only screen and (max-width:600px) {
+              font-size: 20px;
+            }
           }
 
           .signature{
             text-align: center;
-       
+            @media only screen and (max-width:600px) {
+              width: 200px;
+              margin: 0 auto;
+            }
 
           }
 
@@ -577,6 +599,9 @@ body {
             padding-top: 45px;
             letter-spacing: normal;
             line-height: 1.2;
+            @media only screen and (max-width:600px) {
+              font-size: 20px;
+            }
           }
         }
 
@@ -870,14 +895,7 @@ body {
     padding-left: 180px;
     z-index: 1;
     letter-spacing: 1.5px;
-    @media only screen and (max-width:1024px) {
-      max-width: 70%;
-      padding: 0;
-      margin: 0 auto;
-    }
     @media only screen and (min-width:1024px) {
-      max-width: 54%;
-      padding-left: 180px;
       &.is-6 {
         position: absolute;
         right: 180px;
@@ -892,6 +910,14 @@ body {
           bottom: -70px;
         }
       }
+    }
+    @media only screen and (max-width:1200px) {
+      max-width: 88%;
+    }
+    @media only screen and (max-width:1024px) {
+      max-width: 70%;
+      padding: 0;
+      margin: 0 auto;
     }
   }
 
@@ -937,6 +963,7 @@ body {
         position: relative;
         bottom: -3px;
         @media only screen and (max-width:600px) {
+          left: -2px;
           bottom: -1px;
         } 
 
@@ -950,6 +977,9 @@ body {
     @media only screen and (max-width:768px) {
       font-size: 28px;
       line-height: 1.1;
+    }
+    @media only screen and (max-width:600px) {
+      font-size: 20px;
     }
   }
 
