--- a/themes/cifq/partials/site/nav.htm
+++ b/themes/cifq/partials/site/nav.htm
@@ -44,6 +44,9 @@
                                 <a href="{{ 'assets/documents/confidentiality_policy_CIFQ.pdf'|theme }}" target="_blank">{{ 'Politiques de confidentialité'|_ }}</a>.
                             {% endif %}
                             </small>
+                        <div class="is-mobile extra-links">
+                            {% include "site/links.htm" %}
+                        </div>
                     </div>
                 </div>
             </div>
