--- a/themes/cifq/partials/site/links.htm
+++ b/themes/cifq/partials/site/links.htm
@@ -37,6 +37,7 @@
           <svg class="youtube-icon" viewBox="0 0 1 1"><use xlink:href="#youtube" /></use></svg>
       </a>
   </div>
-  <div class="header__secondary-links lang-switcher">
+  {# A la demande du client: Ne pas voir le EN - Switch des lang #}
+  {# <div class="header__secondary-links lang-switcher">
       {% component 'localePicker' %}
-  </div>
+  </div> #}
