--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -81,21 +81,29 @@ body {
 
 .is-desktop {
   display: block;
+  visibility: inherit;
+  opacity: 1;
 }
 
 @media screen and (max-width: 1024px) {
   .is-desktop {
     display: none;
+    visibility: hidden;
+    opacity: 0;
   }
 }
 
 .is-mobile {
   display: none;
+  visibility: hidden;
+  opacity: 0;
 }
 
 @media screen and (max-width: 1024px) {
   .is-mobile {
+    opacity: 1;
     display: block;
+    visibility: inherit;
   }
 }
 
