text fix mobile menu v2

--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -90,10 +90,12 @@ body {
   display: block;
   visibility: inherit;
   opacity: 1;
+  height: initial;
   @media screen and (max-width: 1024px) {
     display: none;
     visibility: hidden;
     opacity: 0;
+    height: 0;
   }
 }
 
@@ -101,10 +103,12 @@ body {
   display: none;
   visibility: hidden;
   opacity: 0;
+  height: 0;
   @media screen and (max-width: 1024px) {
     opacity: 1;
     display: block;
     visibility: inherit;
+    height: initial;
   }
 }
 
