--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -1,5 +1,45 @@
 @charset "UTF-8";
 @import url(../../../../../node_modules/font-awesome/css/font-awesome.css);
+.fullscreen-bg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.fullscreen-bg__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-aspect-ratio: 16 / 9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16 / 9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  /* .fullscreen-bg {
+    background: url('../img/videoframe.jpg') center center / cover no-repeat;
+  } */
+  .fullscreen-bg__video {
+    display: none;
+  }
+}
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -165,6 +205,9 @@ body {
   font-size: 20px;
   overflow: hidden;
   margin: 20px 20px 0;
+  overflow: hidden;
+  height: 0;
+  padding-top: 37.5%;
 }
 
 @media screen and (max-width: 1760px) {
@@ -191,6 +234,12 @@ body {
   flex-direction: column;
   justify-content: center;
   height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: inherit;
 }
 
 #page-nosforets .header > .container .signature {
@@ -201,6 +250,12 @@ body {
 @media screen and (max-width: 600px) {
   #page-nosforets .header > .container .signature {
     margin-right: -11vw;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #page-nosforets .header > .container .signature img {
+    width: 300px;
   }
 }
 
@@ -237,6 +292,12 @@ body {
 #page-nosforets .header .mouse-scroll img {
   width: 26px;
   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1200px) {
+  #page-nosforets .header .mouse-scroll {
+    display: none;
+  }
 }
 
 #page-nosforets .header .video-background {
@@ -1167,40 +1228,6 @@ body {
   }
 }
 
-#page-nosforets .Medias__swiper-slide-content-play {
-  width: inherit;
-  max-width: inherit;
-  display: flex;
-  margin-top: 36px;
-  align-items: center;
-  text-transform: none;
-  text-decoration: none;
-  font-size: 22px;
-  font-family: Plantin;
-  font-style: italic;
-  letter-spacing: 0.5px;
-  color: #fff;
-}
-
-@media only screen and (max-width: 600px) {
-  #page-nosforets .Medias__swiper-slide-content-play {
-    max-width: initial;
-    width: 100%;
-  }
-}
-
-#page-nosforets .Medias__swiper-slide-content-play .Header__play-btn {
-  margin: 0;
-  margin-left: 12px;
-}
-
-@media only screen and (max-width: 1024px) {
-  #page-nosforets .Medias__swiper-slide-content-play .Header__play-btn {
-    font-size: 16px;
-    line-height: normal;
-  }
-}
-
 #page-nosforets .Medias__swiper-button-prev,
 #page-nosforets .Medias__swiper-button-next {
   max-width: 5vw;
@@ -1224,6 +1251,128 @@ body {
 
 #page-nosforets .Medias__swiper-button-next {
   right: 20px;
+}
+
+#page-nosforets #videoIframe {
+  width: 100%;
+  height: 100%;
+}
+
+#header-content-play.Medias__swiper-slide-content-play {
+  position: absolute;
+  top: 40px;
+  right: 144px;
+}
+
+.Medias__swiper-slide-content-play {
+  width: inherit;
+  max-width: inherit;
+  display: flex;
+  margin-top: 36px;
+  align-items: center;
+  text-transform: none;
+  text-decoration: none;
+  font-size: 22px;
+  font-family: Plantin;
+  font-style: italic;
+  letter-spacing: 0.5px;
+  color: #fff;
+}
+
+@media only screen and (max-width: 600px) {
+  .Medias__swiper-slide-content-play {
+    max-width: initial;
+    width: 100%;
+  }
+}
+
+.Medias__swiper-slide-content-play .Header__play-btn {
+  margin: 0;
+  margin-left: 12px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .Medias__swiper-slide-content-play .Header__play-btn {
+    font-size: 16px;
+    line-height: normal;
+  }
+}
+
+.Lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  transition: transform 0.5s, opacity 0.5s;
+  opacity: 0;
+  transform: translateY(-100%);
+  z-index: 9999;
+}
+
+.Lightbox.is-active {
+  transform: translateY(0%);
+  opacity: 1;
+}
+
+.Lightbox__background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.Lightbox__close {
+  position: absolute;
+  color: #fff;
+  right: 15px;
+  top: 15px;
+  font-size: 30px;
+  padding: 15px;
+  cursor: pointer;
+  font-family: Pantograph;
+}
+
+.Lightbox__video {
+  overflow: hidden;
+  transform: scale(0.8);
+  width: 100vw;
+  height: calc(100vw * 9 / 16);
+  margin: auto;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+}
+
+.Lightbox__video .Lightbox__video iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.Lightbox__video .Lightbox__form {
+  position: absolute;
+  width: 600px;
+  max-width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.Lightbox__video .Lightbox #video_mp4 {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.Lightbox iframe {
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=foret.css.map */
