--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -31,7 +31,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1024px) {
   /* .fullscreen-bg {
     background: url('../img/videoframe.jpg') center center / cover no-repeat;
   } */
@@ -206,8 +206,6 @@ body {
   background-attachment: fixed;
   font-size: 20px;
   overflow: hidden;
-  margin: 20px 20px 0;
-  overflow: hidden;
   height: 0;
   padding-top: 37.5%;
 }
@@ -215,6 +213,13 @@ body {
 @media screen and (max-width: 1760px) {
   #page-nosforets .header {
     background-position: 70% 50%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #page-nosforets .header {
+    padding-top: inherit;
+    height: 600px;
   }
 }
 
@@ -296,7 +301,7 @@ body {
   margin-bottom: 10px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1400px) {
   #page-nosforets .header .mouse-scroll {
     display: none;
   }
@@ -1268,10 +1273,32 @@ body {
   height: 100%;
 }
 
+.header-content-play-container {
+  width: 1024px;
+  border: 1px solid red;
+}
+
 #header-content-play.Medias__swiper-slide-content-play {
   position: absolute;
-  top: 40px;
-  right: 144px;
+  right: -18px;
+  left: inherit;
+  width: 250px;
+  top: -106px;
+}
+
+@media only screen and (max-width: 1024px) {
+  #header-content-play.Medias__swiper-slide-content-play {
+    top: 370px;
+    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media only screen and (max-width: 960px) {
+  #header-content-play.Medias__swiper-slide-content-play {
+    right: -66px;
+  }
 }
 
 .Medias__swiper-slide-content-play {
