--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -21,10 +21,15 @@ forceUrl = 0
         </div>
     </div>
     <div class="isMobile"></div>
-
-     <a href="#" id="header-content-play" class="Medias__swiper-slide-content-play">
-        <img src="{{ imgPath }}/play_btn.png">
-        <p class="Header__play-btn">{{ video.button.label }}</p>
-    </a>
+    <div class="container" style="position: relative;">
+        <div class="row">
+            <div class="grid-full">
+                <a href="#" id="header-content-play" class="Medias__swiper-slide-content-play">
+                    <img src="{{ imgPath }}/play_btn.png">
+                    <p class="Header__play-btn">{{ video.button.label }}</p>
+                </a>
+            </div>
+        </div>
+    </div>
 
 </div>
