--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url(../../../../../node_modules/font-awesome/css/font-awesome.css);
 .fullscreen-bg {
   position: absolute;
   top: 0;
@@ -1410,6 +1409,14 @@ body {
 .Lightbox iframe {
   width: 100%;
   height: 100%;
+}
+
+.Lightbox {
+  display: block;
+}
+
+#header-content-play {
+  display: flex;
 }
 
 /*# sourceMappingURL=foret.css.map */
