--- a/themes/cifq/partials/site/links.htm
+++ b/themes/cifq/partials/site/links.htm
@@ -17,13 +17,13 @@
   </div>
   <div class="header__secondary-links">
       <a href="https://facebook.com/uneforetdepossibilites/" target="_blank" class="Header__navigation-social">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fab fa-facebook-f"></i>
       </a>
       <a href="https://www.instagram.com/uneforetdepossibilites/" target="_blank" class="Header__navigation-social">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
+         <i class="fab fa-instagram"></i>
       </a>
       <a href="https://www.youtube.com/channel/UCF2sXehDojg9K6CSK8_VtrA" target="_blank" class="Header__navigation-social">
-          <i class="fa fa-youtube-play" aria-hidden="true"></i>
+         <i class="fab fa-youtube"></i>
       </a>
   </div>
   {# A la demande du client: Ne pas voir le EN - Switch des lang #}
