--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -263,11 +263,13 @@ body {
 
         .intro{
           width: 80%;
+          max-width: 1024px;
           margin: auto;
           background: rgba(0,0,0,.30);
           padding:30px;
           font-family: Plantin;
           letter-spacing: normal;
+          text-align: center;
           @media screen and (max-width: 768px) {
             width: 100%;
             font-size: 16px;
