--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -287,11 +287,13 @@ body {
 
 #page-nosforets .header > .container .intro {
   width: 80%;
+  max-width: 1024px;
   margin: auto;
   background: rgba(0, 0, 0, 0.3);
   padding: 30px;
   font-family: Plantin;
   letter-spacing: normal;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
