--- a/themes/cifq/partials/site/links.htm
+++ b/themes/cifq/partials/site/links.htm
@@ -27,6 +27,6 @@
       </a>
   </div>
   {# A la demande du client: Ne pas voir le EN - Switch des lang #}
-  {# <div class="header__secondary-links lang-switcher">
+  <div class="header__secondary-links lang-switcher">
       {% component 'localePicker' %}
-  </div> #}
+  </div>
