--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -376,7 +376,7 @@ body {
   padding: 4vw 0;
   color: #6a6a6a;
   text-align: center;
-  font-size: 28px;
+  font-size: 26px;
   font-family: Plantin;
   letter-spacing: normal;
   background-size: cover;
@@ -399,7 +399,7 @@ body {
 }
 
 #page-nosforets .content.intro p {
-  line-height: 1.143;
+  line-height: 1.1;
   padding: 0 5vw;
   margin: 0;
 }
@@ -1063,7 +1063,7 @@ body {
 }
 
 #page-nosforets .Medias__swiper-slide-content {
-  max-width: 54%;
+  max-width: 43%;
   padding-left: 180px;
   z-index: 1;
   letter-spacing: 1.5px;
@@ -1080,16 +1080,12 @@ body {
 @media only screen and (min-width: 1024px) {
   #page-nosforets .Medias__swiper-slide-content.is-6 {
     position: absolute;
-    right: 180px;
+    right: 100px;
     padding-left: 0;
-    text-align: right;
-  }
-  #page-nosforets .Medias__swiper-slide-content.is-6 .Medias__swiper-slide-content-description {
-    float: right;
   }
   #page-nosforets .Medias__swiper-slide-content.is-6 .Medias__swiper-slide-content-play {
     position: absolute;
-    right: 0;
+    left: 0;
     bottom: -70px;
   }
 }
@@ -1112,10 +1108,11 @@ body {
   position: relative;
   margin-bottom: 48px;
   color: #fff;
-  font-size: 54px;
+  font-size: 50px;
   font-family: Brandon;
   font-weight: 900;
-  line-height: 68px;
+  line-height: 66px;
+  letter-spacing: normal;
 }
 
 #page-nosforets .Medias__swiper-slide-content-quote .quote::before, #page-nosforets .Medias__swiper-slide-content-quote .quote::after {
@@ -1187,9 +1184,8 @@ body {
 }
 
 #page-nosforets .Medias__swiper-slide-content-name {
-  margin-bottom: 16px;
   color: #fff;
-  font-size: 35px;
+  font-size: 28px;
   font-family: Brandon;
   font-weight: 900;
   font-style: italic;
@@ -1215,12 +1211,13 @@ body {
 }
 
 #page-nosforets .Medias__swiper-slide-content-description {
-  max-width: 70%;
+  max-width: 58%;
   color: #fff;
-  font-size: 26px;
+  font-size: 24px;
   font-family: Brandon;
   font-weight: 300;
-  line-height: 36px;
+  line-height: 34px;
+  letter-spacing: 0.03em;
 }
 
 @media only screen and (max-width: 1024px) {
