--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -93,7 +93,6 @@ body {
 
 .extra-links {
   margin-top: 20px;
-  // visibility: hidden;
   .header__social-menu:before {
     display: none;
   }
@@ -325,7 +324,7 @@ body {
         padding: 4vw 0;
         color: $c-gray;
         text-align: center;
-        font-size: 28px;
+        font-size: 26px;
         font-family: Plantin;
         letter-spacing: normal;
         background-size: cover;
@@ -344,7 +343,7 @@ body {
         }
 
         p {
-          line-height: 1.143;
+          line-height: 1.1;
           padding: 0 5vw;
           margin: 0;
           @media screen and (max-width: 600px) {
@@ -943,7 +942,7 @@ body {
   }
 
   .Medias__swiper-slide-content {
-    max-width: 54%;
+    max-width: 43%;
     padding-left: 180px;
     z-index: 1;
     letter-spacing: 1.5px;
@@ -958,15 +957,11 @@ body {
     @media only screen and (min-width:1024px) {
       &.is-6 {
         position: absolute;
-        right: 180px;
+        right: 100px;
         padding-left: 0;
-        text-align: right;
-        .Medias__swiper-slide-content-description {
-          float: right;
-        }
         .Medias__swiper-slide-content-play {
           position: absolute;
-          right: 0;
+          left: 0;
           bottom: -70px;
         }
       }
@@ -985,10 +980,11 @@ body {
     position: relative;
     margin-bottom: 48px;
     color: #fff;
-    font-size: 54px;
+    font-size: 50px;
     font-family: Brandon;
     font-weight: 900;
-    line-height: 68px;
+    line-height: 66px;
+    letter-spacing: normal;
     .quote {
 
       &::before,
@@ -1044,9 +1040,8 @@ body {
   }
 
   .Medias__swiper-slide-content-name {
-    margin-bottom: 16px;
     color: #fff;
-    font-size: 35px;
+    font-size: 28px;
     font-family: Brandon;
     font-weight: 900;
     font-style: italic;
@@ -1064,12 +1059,13 @@ body {
   }
 
   .Medias__swiper-slide-content-description {
-    max-width: 70%;
+    max-width: 58%;
     color: #fff;
-    font-size: 26px;
+    font-size: 24px;
     font-family: Brandon;
     font-weight: 300;
-    line-height: 36px;
+    line-height: 34px;
+    letter-spacing: 0.03em;
     @media only screen and (max-width:1024px) {
       font-size: 24px;
       line-height: 1.3;
