--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -237,12 +237,13 @@ body {
 #page-nosforets .header > .container .signature.main-title {
   position: relative;
   height: 200px;
-  display: flex;
-  justify-content: center;
 }
 
 #page-nosforets .header > .container .signature.main-title .title {
   position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   transition: opacity .5s ease-out;
   opacity: 0;
   display: flex;
