--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -213,10 +213,11 @@ body {
           &.main-title {
             position: relative;
             height: 200px;
-            display: flex;
-            justify-content: center;
             .title {
               position: absolute;
+              top: 0;
+              left: 50%;
+              transform: translateX(-50%);
               transition: opacity .5s ease-out;
               opacity: 0;
               display: flex;
