--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -957,7 +957,7 @@ body {
     @media only screen and (min-width:1024px) {
       &.is-6 {
         position: absolute;
-        right: 100px;
+        right: 150px;
         padding-left: 0;
         .Medias__swiper-slide-content-play {
           position: absolute;
@@ -978,7 +978,7 @@ body {
 
   .Medias__swiper-slide-content-quote {
     position: relative;
-    margin-bottom: 48px;
+    margin-bottom: 30px;
     color: #fff;
     font-size: 50px;
     font-family: Brandon;
@@ -1126,10 +1126,11 @@ body {
 
 #header-content-play.Medias__swiper-slide-content-play{
   position: absolute;
-  right: -18px;
+  right: 0px;
   left: inherit;
-  width: 250px;
+  width: initial;
   top: -106px;
+  font-size: 24px;
   @media only screen and (max-width:1024px) {
     top: 340px;
     right: 0;
@@ -1144,14 +1145,12 @@ body {
 }
 
 .Medias__swiper-slide-content-play {
-  width: inherit;
-  max-width: inherit;
   display: flex;
-  margin-top: 36px;
+  margin-top: 20px;
   align-items: center;
   text-transform: none;
   text-decoration: none;
-  font-size: 22px;
+  font-size: 33px;
   font-family: Plantin;
   font-style: italic;
   letter-spacing: 0.5px;
@@ -1161,8 +1160,7 @@ body {
     width: 100%;
   }
   .Header__play-btn {
-    margin: 0;
-    margin-left: 12px;
+    margin: 0 0 0 20px;
     @media only screen and (max-width:1024px) {
       font-size: 16px;
       line-height: normal;
