--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -237,13 +237,12 @@ body {
 #page-nosforets .header > .container .signature.main-title {
   position: relative;
   height: 200px;
+  display: flex;
+  justify-content: center;
 }
 
 #page-nosforets .header > .container .signature.main-title .title {
   position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
   transition: opacity .5s ease-out;
   opacity: 0;
   display: flex;
@@ -274,9 +273,7 @@ body {
   padding: 30px;
   font-family: Plantin;
   letter-spacing: normal;
-  text-align: left;
-  font-size: 18px;
-  line-height: 22px;
+  text-align: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -1159,6 +1156,12 @@ body {
   bottom: -3px;
 }
 
+@media only screen and (max-width: 1200px) {
+  #page-nosforets .Medias__swiper-slide-content-quote .quote::after {
+    left: 0px;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   #page-nosforets .Medias__swiper-slide-content-quote .quote::after {
     left: -2px;
@@ -1182,7 +1185,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   #page-nosforets .Medias__swiper-slide-content-quote {
-    font-size: 20px;
+    margin-bottom: 20px;
   }
 }
 
@@ -1196,20 +1199,20 @@ body {
 
 @media only screen and (max-width: 1024px) {
   #page-nosforets .Medias__swiper-slide-content-name {
-    font-size: 30px;
+    font-size: 26px;
     line-height: normal;
   }
 }
 
 @media only screen and (max-width: 768px) {
   #page-nosforets .Medias__swiper-slide-content-name {
-    font-size: 28px;
+    font-size: 24px;
   }
 }
 
 @media only screen and (max-width: 600px) {
   #page-nosforets .Medias__swiper-slide-content-name {
-    font-size: 26px;
+    font-size: 20px;
   }
 }
 
@@ -1225,7 +1228,7 @@ body {
 
 @media only screen and (max-width: 1024px) {
   #page-nosforets .Medias__swiper-slide-content-description {
-    font-size: 24px;
+    font-size: 22px;
     line-height: 1.3;
   }
 }
@@ -1321,6 +1324,9 @@ body {
   .Medias__swiper-slide-content-play {
     max-width: initial;
     width: 100%;
+  }
+  .Medias__swiper-slide-content-play img {
+    width: 45px;
   }
 }
 
@@ -1422,15 +1428,6 @@ body {
 
 html.page-nosforets .lang-switcher {
   display: none;
-}
-
-.fullscreen-bg-mask {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.25);
 }
 
 /*# sourceMappingURL=foret.css.map */
