--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -213,11 +213,10 @@ body {
           &.main-title {
             position: relative;
             height: 200px;
+            display: flex;
+            justify-content: center;
             .title {
               position: absolute;
-              top: 0;
-              left: 50%;
-              transform: translateX(-50%);
               transition: opacity .5s ease-out;
               opacity: 0;
               display: flex;
@@ -247,10 +246,7 @@ body {
           padding:30px;
           font-family: Plantin;
           letter-spacing: normal;
-          text-align: left;
-          font-size: 18px;
-          line-height: 22px;
-
+          text-align: center;
           @media screen and (max-width: 768px) {
             width: 100%;
             font-size: 16px;
@@ -1022,6 +1018,9 @@ body {
         left: 10px;
         position: relative;
         bottom: -3px;
+        @media only screen and (max-width:1200px) {
+          left: 0px;
+        }
         @media only screen and (max-width:600px) {
           left: -2px;
           bottom: -1px;
@@ -1039,7 +1038,7 @@ body {
       line-height: 1.1;
     }
     @media only screen and (max-width:600px) {
-      font-size: 20px;
+      margin-bottom: 20px;
     }
   }
 
@@ -1050,15 +1049,15 @@ body {
     font-weight: 900;
     font-style: italic;
     @media only screen and (max-width:1024px) {
-      font-size: 30px;
+      font-size: 26px;
       line-height: normal;
     }
 
     @media only screen and (max-width:768px) {
-      font-size: 28px;
+      font-size: 24px;
     }
     @media only screen and (max-width:600px) {
-      font-size: 26px;
+      font-size: 20px;
     }
   }
 
@@ -1071,7 +1070,7 @@ body {
     line-height: 34px;
     letter-spacing: 0.03em;
     @media only screen and (max-width:1024px) {
-      font-size: 24px;
+      font-size: 22px;
       line-height: 1.3;
     }
 
@@ -1162,6 +1161,9 @@ body {
   @media only screen and (max-width:600px) {
     max-width: initial;
     width: 100%;
+    img {
+      width: 45px;
+    }
   }
   .Header__play-btn {
     margin: 0 0 0 20px;
@@ -1254,13 +1256,3 @@ body {
 html.page-nosforets .lang-switcher{
   display: none;
 }
-
-.fullscreen-bg-mask{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.25);
-}
-    
