modif header btn play

--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -1293,11 +1293,12 @@ body {
 
 @media only screen and (max-width: 1024px) {
   #header-content-play.Medias__swiper-slide-content-play {
-    top: 340px;
+    top: 360px;
     right: 0;
     left: 50%;
     transform: translateX(-50%);
-    width: 190px;
+    display: flex;
+    justify-content: center;
   }
 }
 
