--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -23,7 +23,7 @@ forceUrl = 0
         <div class="row">
             <div class="grid-full">
                 <a href="#" id="header-content-play" class="Medias__swiper-slide-content-play">
-                    <img src="{{ imgPath }}/play_btn.png">
+                    <img src="{{ imgPath }}/play-btn2.png">
                     <p class="Header__play-btn">{{ video.button.label }}</p>
                 </a>
             </div>
