--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -247,7 +247,7 @@ body {
           padding:30px;
           font-family: Plantin;
           letter-spacing: normal;
-          text-align: left;
+          text-align: center;
           font-size: 18px;
           line-height: 22px;
 
@@ -273,6 +273,9 @@ body {
         img{
           width: 26px;
           margin-bottom: 10px;
+        }
+        span{
+          font-size: 16px;
         }
         @media screen and (max-width: 1400px) {
           display: none;
@@ -335,7 +338,7 @@ body {
 
         h1{
           font-weight: 700;
-          font-size: 49px;
+          font-size: 44px;
           font-family: Brandon;
           color:$c-green;
           line-height: 1.15;
@@ -350,6 +353,7 @@ body {
           line-height: 1.1;
           padding: 0 5vw;
           margin: 0;
+          font-size: 23px;
           @media screen and (max-width: 600px) {
             font-size: 16px;
             padding: 0;
