modif url video

--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -1084,6 +1084,10 @@ body {
   display: flex;
 }
 
+#page-nosforets .Medias__swiper-slide-content.is-2 .Medias__swiper-slide-content-play {
+  display: flex;
+}
+
 @media only screen and (min-width: 1024px) {
   #page-nosforets .Medias__swiper-slide-content.is-6 {
     position: absolute;
