--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -961,6 +961,11 @@ body {
         display: flex;
       }
     }
+    &.is-2 {
+      .Medias__swiper-slide-content-play {
+        display: flex;
+      }
+    }
     @media only screen and (min-width:1024px) {
       &.is-6 {
         position: absolute;
