Update line break

--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -24,7 +24,7 @@ forceUrl = 0
             <div class="grid-full">
                 <a href="#" id="header-content-play" class="Medias__swiper-slide-content-play">
                     <img src="{{ imgPath }}/play-btn2.png">
-                    <p class="Header__play-btn">{{ video.button.label }}</p>
+                    <p class="Header__play-btn">{{ video.button.label|raw }}</p>
                 </a>
             </div>
         </div>
