--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -1135,6 +1135,8 @@ body {
   width: initial;
   top: -106px;
   font-size: 24px;
+  line-height: 27px;
+  margin-top: 36px;
   @media only screen and (max-width:1024px) {
     top: 360px;
     right: 0;
