Fix header locale switch

--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -4,6 +4,26 @@ forceUrl = 0
 
 {% set imgPath = '/themes/cifq/assets/public/images' %}
 
+<style>
+
+.header__secondary-links.lang-switcher{
+    max-width: 40px;
+    padding-left: 0;
+}
+
+.header__secondary-links.lang-switcher .form-control{
+    padding: 2px 5px;
+    width: 42px;
+}
+
+@media screen and (min-width: 961px) {
+    .header__secondary-links.lang-switcher{
+        margin-right: 14px;
+    }
+}
+
+</style>
+
 <div class="header">
     <div class="container">
         <div class="row">
