header position mobile

--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -22,6 +22,14 @@ forceUrl = 0
     }
 }
 
+@media screen and (max-width: 960px) {
+    .header__logo{
+        margin-top: 20px;
+    }
+}
+
+
+
 </style>
 
 <div class="header">
